# docs/swagger.json
@@ -39,7 +39,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.AvailableHours"
+                                "$ref": "#/definitions/handlers.SchedulerDTO"
                             }
                         }
                     },
@@ -153,6 +153,43 @@
                 }
             }
         },
+        "domain.Entry": {
+            "type": "object",
+            "properties": {
+                "end": {
+                    "$ref": "#/definitions/domain.Hour"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "init": {
+                    "$ref": "#/definitions/domain.Hour"
+                },
+                "room": {
+                    "$ref": "#/definitions/domain.Room"
+                },
+                "subject": {
+                    "$ref": "#/definitions/domain.Subject"
+                },
+                "week": {
+                    "type": "string"
+                },
+                "weekday": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.Hour": {
+            "type": "object"
+        },
+        "domain.Room": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.Subject": {
             "type": "object",
             "properties": {
@@ -228,6 +265,23 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/domain.DegreeDescription"
+                    }
+                }
+            }
+        },
+        "handlers.SchedulerDTO": {
+            "type": "object",
+            "properties": {
+                "availableHours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.AvailableHours"
+                    }
+                },
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Entry"
                     }
                 }
             }
